set up front end of game editor and worked on expandable list view for script actions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">BunnyWorld</string>
+    <string name="on_click">on click</string>
+    <string-array name="script_actions">
+        <item>on click</item>
+        <item>GoTo</item>
+        <item>PlaySound</item>
+        <item>Hide</item>
+        <item>Show</item>
+    </string-array>
 </resources>
