--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">BunnyWorld</string>
     <string name="on_click">on click</string>
-    <string-array name="script_actions">
-        <item>on click</item>
-        <item>GoTo</item>
-        <item>PlaySound</item>
-        <item>Hide</item>
-        <item>Show</item>
-    </string-array>
+    <string name="click_obj">Click on Object</string>
+    <string name="show_script">Show Script</string>
+    <string name="copy_shape">Copy Shape</string>
+    <string name="cut_shape">Cut Shape</string>
+    <string name="paste_shape">Paste Shape</string>
+    <string name="change_background">Change Background</string>
+    <string name="import_resource">Import Resource</string>
 </resources>
