--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="default_text_message">Enter text here</string>
     <string name="shape">shape</string>
     <string name="text">Text:</string>
+    <string name="reset_script">Reset Script</string>
 </resources>
