added delete all games extension

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
     <string name="shape">shape</string>
     <string name="text">Text:</string>
     <string name="reset_script">Reset Script</string>
+    <string name="deletegames">Delete All Games</string>
+    <string name="areyousure">Are you sure?</string>
+    <string name="deletegameswarning">This will delete all the games currently in the database. Is that fine?</string>
+    <string name="ok">OK</string>
+    <string name="cancel">CANCEL</string>
 </resources>
