--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="cancel">CANCEL</string>
     <string name="properties_panel">Properties panel:</string>
     <string name="resource_panel">Resource panel:</string>
+    <string name="font">Font size:</string>
     <string-array name="location_array">
         <item>Show Right</item>
         <item>Show Left</item>
