can now restart games during GameView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="properties_panel">Properties panel:</string>
     <string name="resource_panel">Resource panel:</string>
     <string name="font">Font size:</string>
+    <string name="restart">RESTART</string>
     <string-array name="location_array">
         <item>Show Right</item>
         <item>Show Left</item>
