set up error checking to display appropriately but still need to implement functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="choose_shape">Choose shape:</string>
     <string name="on_drop">on drop</string>
     <string name="restart">RESTART</string>
+    <string name="error_status">Error Status:</string>
+    <string name="check_errors">Check Errors</string>
     <string-array name="location_array">
         <item>Show Right</item>
         <item>Show Left</item>
