--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="restart">RESTART</string>
     <string name="error_status">Error Status:</string>
     <string name="check_errors">Check Errors</string>
+    <string name="undo_delete_page">Undo Delete Page:</string>
+    <string name="undo_delete_shape">Undo Delete Shape:</string>
     <string-array name="location_array">
         <item>Show Right</item>
         <item>Show Left</item>
