--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="check_errors">Check Errors</string>
     <string name="undo_delete_page">Undo Delete Page:</string>
     <string name="undo_shape_changes">Undo Shape Changes:</string>
+    <string name="restart_game">Restart Game:</string>
     <string-array name="location_array">
         <item>Show Right</item>
         <item>Show Left</item>
